fixata scrollbar my-playlist

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ main aside {
     position: relative;
     display: flex;
     flex-direction: column;
+    /* justify-content: space-between; */
     height: 100%;
     flex-shrink: 0;
     width: 250px;
@@ -189,6 +190,11 @@ main aside .my-list > ul > li {
 main aside .my-list > ul > li a {
     padding: 5px;
     background-color: palevioletred;
+}
+
+main aside .bottom {
+    background-color: peru;
+    align-self: flex-end;
 }
 
 main aside .bottom > ul {
